# markdown-editor

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: explore.md  review.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: test-env-code-generation-plan.md  u1-foundation-code-generation-plan.md  u1-foundation-functional-design-plan.md  u1-foundation-nfr-requirements-plan.md  u2-core-editor-code-generation-plan.md  u2-core-editor-functional-design-plan.md  u2-core-editor-nfr-requirements-plan.md  u3-file-management-code-generation-plan.md  u3-file-management-functional-design-plan.md  u3-file-management-nfr-design-plan.md  u3-file-management-nfr-requirements-plan.md  u4-functional-design-questions.md  u4-nfr-design-questions.md  u4-nfr-requirements-questions.md  u4-platform-integration-code-generation-plan.md  u4-platform-integration-functional-design-plan.md  u4-platform-integration-nfr-design-plan.md  u4-platform-integration-nfr-requirements-plan.md
markdown-editor/: .prettierrc  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
markdown-editor/.svelte-kit/: ambient.d.ts
markdown-editor/src/: app.css  app.html
markdown-editor/src-tauri/: Cargo.toml  tauri.conf.json
markdown-editor/src-tauri/src/: lib.rs
skills/markdown-editor/: SKILL.md
(+249 files in other folders)
