[package]
name = "markdown-editor"
version = "0.1.0"
description = "The best Markdown editor for blog writing"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
